source/styles/blocks/sort.scss
.sort {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 20px;
  height: 32px;
}

.sort__label {
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
}

.sort__select {
  max-width: 165px;
  height: 32px;
  padding: 4px 20px 4px 10px;
  font-family: $font-primary;
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
  color: $color-base-primary;
  background-color: transparent;
  background-image: url("../../icons/buttons/select-arrow.svg");
  background-repeat: no-repeat;
  background-position: right 10px top 13px;
  background-size: 10px 6px;
  border: 0;
  appearance: none;
  cursor: pointer;
}

